Revert grid to original Susy layout, fix avatar overflow
Reverts broken grid changes. Instead fixes the root cause: avatar image
(175px) was wider than sidebar column. Now uses max-width:100% and
overflow:hidden on sidebar to prevent bleed into content area.

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -18,9 +18,9 @@
 
 .page {
   @include breakpoint($large) {
-    float: right;
-    width: calc(100% - 220px);
-    padding-left: 1rem;
+    @include span(10 of 12 last);
+    @include prefix(0.5 of 12);
+    @include suffix(2 of 12);
   }
 
   .page__inner-wrap {
@@ -385,7 +385,7 @@
   float: left;
 
   @include breakpoint($large) {
-    margin-left: 220px;
+    @include pre(2.5 of 12);
   }
 
   a {
