--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -25,8 +25,8 @@
   }
 
   @include breakpoint($large) {
-    float: left;
-    width: 200px;
+    @include span(2 of 12);
+    overflow: hidden;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -95,7 +95,7 @@
   }
 
   img {
-    max-width: 175px;
+    max-width: 100%;
     border-radius: 50%;
 
     @include breakpoint($large) {
